# CopulaGP

./: .gitattributes  .gitignore  .travis.yml  AnalyseResults.ipynb  Copula.ipynb  Copula_MI.ipynb  Copula_MI.py  Copula_nopyro.ipynb  CountCopulas.ipynb  Figures4Poster.ipynb  GaussCopulaPerformance.py  LatentFunctionInference_for_Copula.ipynb  LatentFunctionInference_for_ExpScale.ipynb  LatentFunctionInference_for_ExpScale_FancyDiscreteExample.ipynb  LinearModel.ipynb  MIFI.ipynb  MI_FI_est.ipynb  MI_benchmark.py  MI_gaussH.py  MI_student.py  Marginal_MI.ipynb  Marginal_MI.py  MergeResults.ipynb  ModelSelection.ipynb  Model_Selection.ipynb  MultiParam_RealData.ipynb  MultiParam_nopyro.ipynb  MultiTask.ipynb  MultiTask_RealData.ipynb  NextLayer.ipynb  README.md  Vine.ipynb  Visualise_graph.ipynb  conf.py  gen_list.py  greedy_constructor.py  models_for_data.py  plot_cosyne.py  plot_performance.ipynb  requirements.txt  (+5 more)
MI/: __init__.py  gao.py  marginal.py  mi.py  mine.py
benchmarks/: Check_model_selection.ipynb  MI_GaussH.py  MI_StudentH.py  MI_gaussH.py  MI_just_Clayton.py  MI_rtGaussH.py  MI_student.py  __init__.py  figures.ipynb  training.py
bvcopula/: __init__.py  conf.py  dist_transform.py  distributions.py  infer.py  infer_kd.py  infer_old.py  likelihoods.py  models.py  variational_strategies.py
docs/: Makefile  conf.py
logs/: log_GTX1080.csv  log_RTX2080.csv  log_ordered.csv
marginal/: MI.py  __init__.py  nonparametric.py  order.py
merge_results/: merge_results.py  results_from_txt.py
notebooks/: Ablation.ipynb  CDF_sensitivity.ipynb  MultiTask.ipynb  (+2 more)
(+181 files in other folders)
