[metadata]
# replace with your username:
name = copulagp
version = 0.0.1
author = Nina Kudryashova
author_email = nkudryas@ed.ac.uk
description = A Copula-GP (Gaussian Process) package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NinelK/CopulaGP
project_urls =
    Bug Tracker = https://github.com/NinelK/CopulaGP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
